locust/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust
  namespace: locust
spec:
  replicas: 1
  selector:
    matchLabels:
      name: locust-instance
  template:
    metadata:
      labels:
        name: locust-instance
    spec:
      volumes:
        - name: configmap-locust1
          configMap:
            name: cm-complete-flow-test
            defaultMode: 511
        - name: configmap-locust2
          configMap:
            name: cm-generate-flow-load-test
            defaultMode: 511
      containers:
        - name: locust-instance
          image: image-registry.openshift-image-registry.svc:5000/flask-backend/flask-server:latest
          command:
            - "bash"
            - "-c"
            - "locust -f $LOCUSTFILE_PATH --host=$HOST_SERVER/"
          volumeMounts:
            - name: configmap-locust1
              mountPath: /locustfile1
            - name: configmap-locust2
              mountPath: /locustfile2
          ports:
            - containerPort: 8080
              protocol: TCP
