locust/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: locust
  namespace: locust
  labels:
    name: locust-instance
spec:
  ports:
    - port: 80
      targetPort: 8089
      protocol: TCP
  selector:
    name: locust-instance
